# manim-website-api

./: .gitignore  Dockerfile  README.md  build.sh  config.py  helper.py  main.py  pyproject.toml  requirements.txt  scrape.py  start.sh  tables.py  update_entries.py  update_is_manim_video.py  vercel.json
.github/: dependabot.yml
.github/workflow/: dependabot.yml
.github/workflows/: docker.yml  update.yml
api/: _config.py  _crud.py  _tables.py  index.py
app/: __init__.py  config.py  crud.py  fetch.py  helper.py  main.py  scrape.py
server/: MAINTENANCE.md  docker-compose.yml  mysql.env.example
updator/: __main__.py  helper.py
