[tool.uv]
dev-dependencies = [
    "black>=24.8.0,<26.0.0",
    "ipdb<1.0.0,>=0.13.9",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Naveen M K", email = "naveen521kk@gmail.com"},
]
requires-python = "<4.0,>=3.8"
dependencies = [
    "flask<4.0,>=3.0",
    "python-dotenv<2.0,>=1.0",
    "flask-cors>=5.0,<7.0",
    "certifi",
    "sqlalchemy<2.0.0,>=1.4.51",
    "Flask-SQLAlchemy<4.0.0,>=3.0.5",
    "cryptography>=43.0.3,<46.0.0",
    "psycopg2-binary<3.0.0,>=2.9.10",
]
name = "manim-website-api"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "black>=24.8.0,<26.0.0",
    "ipdb<1.0.0,>=0.13.9",
]

[project.optional-dependencies]
updator = [
    "requests<3,>=2",
    "feedparser<7.0,>=6.0",
    "google-api-python-client<3.0,>=2.159",
]
